--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Build
 
 on:
   # schedule:
@@ -23,6 +23,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: kubernetes/kubernetes
+        fetch-depth: 0
         ref: ${{ github.event.inputs.k8sversion }}
         path: src/k8s.io/kubernetes
 
@@ -33,10 +34,11 @@ jobs:
         
     - name: Build Kubernetes ARMv6
       run: |
+        export KUBE_VERBOSE=5
+        export KUBE_LINUX_ARM_CC=arm-linux-gnueabi-gcc
+        export GOARM=5
         make quick-release KUBE_VERBOSE=5 \
-                           KUBE_BUILD_PLATFORMS=linux/arm \
-                           KUBE_LINUX_ARM_CC=arm-linux-gnueabi-gcc \
-                           GOARM=5
+                           KUBE_BUILD_PLATFORMS=linux/arm
         export KUBE_VERSION=$(git log -1 --pretty='%h')
         echo "KUBE_VERSION=$KUBE_VERSION" >> $GITHUB_ENV
       working-directory: src/k8s.io/kubernetes
