--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,9 @@ jobs:
       uses: actions/setup-go@v1
       with:
         go-version: "1.15.6"
+
+    - name: Checkout current repo
+      uses: actions/checkout@v2
           
     - name: Checkout Kubernetes
       uses: actions/checkout@v2
